compiler/tests/en/errors/recursive_infer.salam
// EXPECT: E012
func spin(n):
    if n <= 0:
        ret spin(n - 1)
    end
    ret 1
end

func main:
    println spin(3)
end
